# NutritionManager-codex

./: .gitignore
docs/: TODO-模块完善清单.md  参考资料.md  后续任务.md  开发记录.md  运行测试.md  需求文档-v8.2.md
src/backend/: pyproject.toml  requirements.txt
src/backend/app/: auth.py  db.py  main.py  models.py  schemas.py  seed.py  utils.py
src/backend/app/data/: app.db
src/backend/app/routers/: __init__.py  ai.py  auth.py  foods.py  nutrition.py  records.py  reports.py  users.py
src/backend/app/services/: assessment.py  assistant.py  recognition.py
src/frontend/: README.md  index.html  package-lock.json  package.json
src/frontend/scripts/: mvp-puppeteer.js  playwright-audit.js  verify-goal-edit.js  verify-sprint-a.js  verify-sprint-b.js  verify-sprint-c.js
src/frontend/src/app/: Root.tsx  routes.ts
src/frontend/src/app/pages/: AIChatPage.tsx  DashboardPage.tsx  LoginPage.tsx  NutritionPage.tsx  ProfilePage.tsx  RecordPage.tsx  ReportsPage.tsx  SocialPage.tsx
src/frontend/src/styles/: fonts.css  theme.css
