[project]
name = "nutrition-manager-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.30.6",
  "sqlalchemy==2.0.36",
  "pydantic==2.10.3",
  "python-jose==3.3.0",
  "passlib==1.7.4",
  "python-multipart==0.0.12",
  "email-validator==2.2.0",
]
